--- a/hw.yml
+++ b/hw.yml
@@ -20,6 +20,7 @@
       build: 
         dockerfile: ./Dockerfile
       state: present
+      source: local
 #  tasks: Docker
 #  docker_container:
 #    name: maven 
