--- a/hw.yml
+++ b/hw.yml
@@ -47,10 +47,16 @@
 - hosts: db
   gather_facts: no
   tasks:
+    - name: Ensure docker.io package present
+      apt:
+        name: docker.io
+        state: present
+
     - name: copy tarball to host
       copy:
         src: ./democontainer_v1_0.tar
         dest: /root/democontainer_v1_0.tar
+
     - name: load container from tarball
       docker_image:
         name: democontainer:v1.0
