--- a/hw.yml
+++ b/hw.yml
@@ -66,7 +66,7 @@
     - name: RunDockerContainer
       docker_container:
         name: democontainer
-        image: democontainer
+        image: democontainer:v1.0
         exposed_ports:
           - 8080
         ports:
