--- a/tamlating.yml
+++ b/tamlating.yml
@@ -19,5 +19,5 @@
       - restart nginx
 
   handlers:
-  name: restart nginx
-  service: name-nginx state=restarted
+  - name: restart nginx
+    service: name-nginx state=restarted
