--- a/hw.yml
+++ b/hw.yml
@@ -25,7 +25,7 @@
 
     - name: build container image
       docker_image:
-        name: tomcat1:1
+        name: tomcat1:v1
         source: build
         build:
           path: /tmp/buildDoker
@@ -38,8 +38,8 @@
 
     - name: Tag and push to docker hub
       docker_image:
-        name: tomcat1:1
-        repository: agolubkov/tomcat1:1
+        name: tomcat1:v1
+        repository: agolubkov/tomcat1:v1
         push: yes
         source: local
 
@@ -56,7 +56,7 @@
 #        dest: ./democontainer_v1_0.tar
 #        flat: true
 
-- hosts: db1
+- hosts: db
   gather_facts: no
   tasks:
     - name: Ensure docker.io package present
@@ -64,17 +64,24 @@
         name: docker.io
         state: present
 
-    - name: copy tarball to host
-      copy:
-        src: ./democontainer_v1_0.tar
-        dest: /root/democontainer_v1_0.tar
+#    - name: copy tarball to host
+#      copy:
+#        src: ./democontainer_v1_0.tar
+#        dest: /root/democontainer_v1_0.tar
 
-    - name: load container from tarball
-      docker_image:
-        name: democontainer:v1.0
-        load_path: /root/democontainer_v1_0.tar
-        state: present
-        source: load
+#   - name: load container from tarball
+#      docker_image:
+#        name: democontainer:v1.0
+#        load_path: /root/democontainer_v1_0.tar
+#        state: present
+#        source: load
+
+    - name: Push Docker image
+      docker_image
+        name: tomcat1:v1
+        image: agolubkov/tomcat1:v1
+        pull:
+
     - name: RunDockerContainer
       docker_container:
         name: democontainer
