--- a/hw.yml
+++ b/hw.yml
@@ -83,8 +83,8 @@
 
     - name: RunDockerContainer
       docker_container:
-        name: democontainer
-        image: democontainer:v1.0
+        name: agolubkov/tomcat1:v1
+        image: agolubkov/tomcat1:v1
         exposed_ports:
           - 8080
         ports:
