--- a/hw.yml
+++ b/hw.yml
@@ -84,7 +84,7 @@
     - name: RunDockerContainer
       docker_container:
         name: agolubkov/tomcat1
-        image: agolubkov/tomcat1
+        image: tomcat1
         exposed_ports:
           - 8080
         ports:
